# difference_calculator

./: Makefile  pyproject.toml
general_code/diff_code/: diff_files.py
general_code/scripts/: gendiff.py
tests/: gen_test_fixture.py  test_diff_code.py
